[gd_scene load_steps=6 format=3 uid="uid://bwcskp1hsvfuj"]

[ext_resource type="Script" path="res://scenes/ui/hud/hud.gd" id="1_041k3"]
[ext_resource type="Texture2D" uid="uid://bmkqorbji4trj" path="res://assets/sprites/charge_bar.svg" id="2_p17a0"]
[ext_resource type="Texture2D" uid="uid://bcxsb2eveq0og" path="res://assets/sprites/charge_bar_fill.svg" id="3_4324r"]
[ext_resource type="Texture2D" uid="uid://fmk10gw3lcon" path="res://assets/sprites/health_bar.svg" id="4_bu0ed"]
[ext_resource type="Texture2D" uid="uid://ceaf5nthlt40g" path="res://assets/sprites/health_bar_fill.svg" id="5_0rq43"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_041k3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 864)
layout_mode = 2

[node name="PlayerAChargeBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1.0
step = 0.0
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 100
stretch_margin_top = 100
stretch_margin_right = 100
stretch_margin_bottom = 100
texture_under = ExtResource("2_p17a0")
texture_progress = ExtResource("3_4324r")
tint_under = Color(8.108, 0.3, 0.1, 1)
tint_progress = Color(25.405, 17.838, 4.324, 1)

[node name="PlayerBChargeBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 8
max_value = 1.0
step = 0.0
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 100
stretch_margin_top = 100
stretch_margin_right = 100
stretch_margin_bottom = 100
texture_under = ExtResource("2_p17a0")
texture_progress = ExtResource("3_4324r")
tint_under = Color(0, 5.946, 10.811, 1)
tint_progress = Color(1.082, 17.838, 30.27, 1)

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerAHealthBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
min_value = -0.2
max_value = 1.2
step = 0.0
value = 1.0
fill_mode = 3
stretch_margin_left = 100
stretch_margin_top = 100
stretch_margin_right = 100
stretch_margin_bottom = 100
texture_under = ExtResource("4_bu0ed")
texture_progress = ExtResource("5_0rq43")
tint_under = Color(8.108, 0.3, 0.1, 1)
tint_progress = Color(25.405, 17.838, 4.324, 1)

[node name="PlayerBHealthBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 8
min_value = -0.2
max_value = 1.2
step = 0.0
value = 1.0
fill_mode = 3
stretch_margin_left = 100
stretch_margin_top = 100
stretch_margin_right = 100
stretch_margin_bottom = 100
texture_under = ExtResource("4_bu0ed")
texture_progress = ExtResource("5_0rq43")
tint_under = Color(0, 5.946, 10.811, 1)
tint_progress = Color(1.082, 17.838, 30.27, 1)
